--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,23 @@
 --- #YAML:1.0
-name:                Net-NationalRail-LiveDepartureBoards
-version:             0.01
-abstract:            Live Departure Boards information
-license:             perl
-author:              
+name:               Net-NationalRail-LiveDepartureBoards
+version:            0.02
+abstract:           Live Departure Boards information
+author:
     - Tim Retout <diocles@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    SOAP::Lite:                    0
-    Test::More:                    0
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    SOAP::Lite:  0
+    Test::More:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
